changed project structure and completed some CRUD operations with firebase

--- a/barvBackEnd/src/main/resources/application.properties
+++ b/barvBackEnd/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/food
+spring.datasource.url=jdbc:postgresql://localhost:5432/foodFB
 spring.datasource.username=postgres
 spring.datasource.password=Rain1234.
 spring.jpa.hibernate.ddl-auto=create-drop
