GET, DELETE, POST works with AWS RDS now. PUT still needed to be implemented.

--- a/barvBackEnd/src/main/resources/application.properties
+++ b/barvBackEnd/src/main/resources/application.properties
@@ -1,9 +1,7 @@
-spring.datasource.url=jdbc:postgresql://localhost:5432/foodFB
-spring.datasource.username=postgres
-spring.datasource.password=Rain1234.
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.url=jdbc:postgresql://barvdatabase.cqngsd6hcnag.eu-north-1.rds.amazonaws.com/postgres
+spring.datasource.username=Kevbo
+spring.datasource.password=postgresMattias
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.format_sql=true
 server.error.include-message=always
-
