--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,8 +31,9 @@ jobs:
       id-token: write
 
     steps:
-      - name: Print contents of /tmp/
-        run:  ls -la
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+
       - name: Checkout repository
         uses: actions/checkout@v3
 
