--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -31,9 +31,6 @@ jobs:
       id-token: write
 
     steps:
-      - name: Build with Maven
-        run: mvn -B package --file pom.xml
-
       - name: Checkout repository
         uses: actions/checkout@v3
 
@@ -68,6 +65,9 @@ jobs:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
           tags: |
             type=raw,value=latest
+
+      - name: Build with Maven
+        run: mvn -B package --file ./barvBackEnd/pom.xml
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
