--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -75,7 +75,7 @@ jobs:
         run: mvn -v
 
       - name: Build with Maven
-        run: mvn -B package --file ./barvBackEnd/pom.xml
+        run: mvn -B package --file ./barvBackEnd/pom.xml -DskipTests
 
       # Build and push Docker image with Buildx (don't push on PR)
       # https://github.com/docker/build-push-action
