--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -71,8 +71,9 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
         
-      - name: Print Maven version information
-        run: mvn -v
+      - name: Print contents of working directory
+        run: ls -la
+
 
       - name: Build with Maven
         run: mvn -B package --file ./barvBackEnd/pom.xml -DskipTests
