--- a/application.properties
+++ b/application.properties
@@ -4,6 +4,7 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.jpa.hibernate.ddl-auto=validate
+spring.datasource.password=Tukp1LTqTnXCk6WV6v2Isg
 
 
 
