add mealinformation component

--- a/vue/barv-front/barv/package.json
+++ b/vue/barv-front/barv/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "vue": "^3.3.4",
+    "vue-meta": "^2.4.0",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
