add el-rows and some styling

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "element-plus": "^2.4.2",
     "vue": "^3.3.4",
     "vue-meta": "^2.4.0",
     "vue-router": "^4.2.5"
